--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="./styles/styles.css">
  <title>Pillow Page</title>
 </head>
 <body>
@@ -15,6 +16,23 @@
   Cards Components
 ============ -->
   #Card Components start here 
+
+<div class="mid-page-content">
+  <h2 class="mid-page-header">
+    <span>Whether you’re buying, selling or renting, we can help you move forward.</span>
+  </h2>
+  <div class="card-container">
+    <div class="buy-component-container card-component">
+      <img src="/Images/Card_Components/Buy_a_home.png" alt="">
+    </div>
+    <div class="sell-component-container card-component">
+      <img src="/Images/Card_Components/Sell_a_home.png" alt="">
+    </div>
+    <div class="rent-component-container card-component">
+      <img src="/Images/Card_Components/Rent_a_home.png" alt="">
+    </div>
+  </div>
+</div>
   
 <!-- =========
      Footer 
