--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <!-- =========
    Header 
 ============ -->
-#header start here 
+<!-- #header start here  -->
   
   <!-- =========
   Cards Components
 ============ -->
-  #Card Components start here 
+  <!-- Card Components start here  -->
 
 <div class="mid-page-content">
   <h2 class="mid-page-header">
@@ -24,12 +24,36 @@
   <div class="card-container">
     <div class="buy-component-container card-component">
       <img src="/Images/Card_Components/Buy_a_home.png" alt="">
+      <div class="card-component-content">
+        <h4 class="card-component-content-title">Buy a home</h4>
+        <p>Find your place with an immersive photo
+          experience and the most listings, including
+          things you won't find anywhere else.
+        </p>
+        <button class="card-component-button">Search homes</button>
+      </div>
     </div>
     <div class="sell-component-container card-component">
       <img src="/Images/Card_Components/Sell_a_home.png" alt="">
+      <div class="card-component-content">
+        <h4 class="card-component-content-title">Sell a home</h4>
+        <p>Whether you get a cash offer through Zillow 
+          Offers&reg or choose to sell traditionally, we can 
+          help you navigate a successful sale.
+        </p>
+        <button class="card-component-button">See your options</button>
+      </div>
     </div>
     <div class="rent-component-container card-component">
       <img src="/Images/Card_Components/Rent_a_home.png" alt="">
+      <div class="card-component-content">
+        <h4 class="card-component-content-title">Rent a home</h4>
+        <p>We're creating a seamless online experience - 
+          from shopping on the largest rental network, to
+          applying, to paying rent.
+        </p>
+        <button class="card-component-button">Find Rentals</button>
+      </div>
     </div>
   </div>
 </div>
@@ -37,7 +61,7 @@
 <!-- =========
      Footer 
 ============ -->
-  #Footer start here 
+  <!-- #Footer start here  -->
   
 </body>
 </html>
