--- a/index.html
+++ b/index.html
@@ -1,25 +1,65 @@
 <html>
+
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Pillow Page</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
+  <title>Pillow Page</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-<!-- =========
+  <!-- =========
    Header 
 ============ -->
-#header start here 
-  
+  #header start here
+
   <!-- =========
   Cards Components
 ============ -->
-  #Card Components start here 
-  
-<!-- =========
+  #Card Components start here
+
+  <!-- =========
      Footer 
 ============ -->
-  #Footer start here 
-  
+  <!-- #Footer start here  -->
+
+  <div class="svclinks-container">
+    <ul class="svclinks__list">
+      <li>
+        <div>
+          <button>
+            <span>Real Estate</span>
+          </button>
+        </div>
+      </li>
+      <li>
+        <div>
+          <button>
+            <span>Rentals</span>
+          </button>
+        </div>
+      </li>
+      <li>
+        <div>
+          <button>
+            <span>Mortgage Rates</span>
+          </button>
+        </div>
+      </li>
+      <li>
+        <div>
+          <button>
+            <span>Browse Homes</span>
+          </button>
+        </div>
+      </li>
+    </ul>
+  </div>
+
 </body>
+
 </html>
