--- a/index.html
+++ b/index.html
@@ -1,119 +1,119 @@
 <html>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap"
+      rel="stylesheet"
+    />
+    <title>Pillow Page</title>
+    <link rel="stylesheet" href="styles/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@600&display=swap" rel="stylesheet">
-  <title>Pillow Page</title>
-  <link rel="stylesheet" href="styles/styles.css">
-</head>
-
-<body>
-  <!-- =========
+  <body>
+    <!-- =========
    Header 
 ============ -->
-  
-<!-- #header start here  -->
-  
-  <!-- =========
-  Cards Components
-============ -->
-  <!-- Card Components start here  -->
 
-<div class="mid-page-content">
-  <h2 class="mid-page-header">
-    <span>Whether you’re buying, selling or renting, we can help you move forward.</span>
-  </h2>
-  <div class="card-container">
-    <div class="buy-component-container card-component">
-      <img src="/Images/Card_Components/Buy_a_home.png" alt="">
-      <div class="card-component-content">
-        <h4 class="card-component-content-title">Buy a home</h4>
-        <p>Find your place with an immersive photo
-          experience and the most listings, including
-          things you won't find anywhere else.
-        </p>
-        <button class="card-component-button">Search homes</button>
+    <!-- #header start here  -->
+
+    <!-- =========
+  Cards Components
+        ============ -->
+    <!-- Card Components start here  -->
+
+    <div class="mid-page-content">
+      <h2 class="mid-page-header">
+        <span
+          >Whether you’re buying, selling or renting, we can help you move
+          forward.</span
+        >
+      </h2>
+      <div class="card-container">
+        <div class="buy-component-container card-component">
+          <img src="/Images/Card_Components/Buy_a_home.png" alt="" />
+          <div class="card-component-content">
+            <h4 class="card-component-content-title">Buy a home</h4>
+            <p>
+              Find your place with an immersive photo experience and the most
+              listings, including things you won't find anywhere else.
+            </p>
+            <button class="card-component-button">Search homes</button>
+          </div>
+        </div>
+        <div class="sell-component-container card-component">
+          <img src="/Images/Card_Components/Sell_a_home.png" alt="" />
+          <div class="card-component-content">
+            <h4 class="card-component-content-title">Sell a home</h4>
+            <p>
+              Whether you get a cash offer through Zillow Offers&reg or choose
+              to sell traditionally, we can help you navigate a successful sale.
+            </p>
+            <button class="card-component-button">See your options</button>
+          </div>
+        </div>
+        <div class="rent-component-container card-component">
+          <img src="/Images/Card_Components/Rent_a_home.png" alt="" />
+          <div class="card-component-content">
+            <h4 class="card-component-content-title">Rent a home</h4>
+            <p>
+              We're creating a seamless online experience - from shopping on the
+              largest rental network, to applying, to paying rent.
+            </p>
+            <button class="card-component-button">Find Rentals</button>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="sell-component-container card-component">
-      <img src="/Images/Card_Components/Sell_a_home.png" alt="">
-      <div class="card-component-content">
-        <h4 class="card-component-content-title">Sell a home</h4>
-        <p>Whether you get a cash offer through Zillow 
-          Offers&reg or choose to sell traditionally, we can 
-          help you navigate a successful sale.
-        </p>
-        <button class="card-component-button">See your options</button>
-      </div>
-    </div>
-    <div class="rent-component-container card-component">
-      <img src="/Images/Card_Components/Rent_a_home.png" alt="">
-      <div class="card-component-content">
-        <h4 class="card-component-content-title">Rent a home</h4>
-        <p>We're creating a seamless online experience - 
-          from shopping on the largest rental network, to
-          applying, to paying rent.
-        </p>
-        <button class="card-component-button">Find Rentals</button>
-      </div>
-    </div>
-  </div>
-</div>
-  
-<!-- =========
+
+    <!-- =========
      Footer 
 ============ -->
-  <!-- #Footer start here  -->
-  
-=======
-  #header start here
+    <!-- #Footer start here  -->
 
-  <!-- =========
+    <!-- =========
   Cards Components
 ============ -->
-  #Card Components start here
 
-  <!-- =========
+    <!-- =========
      Footer 
 ============ -->
-  <!-- #Footer start here  -->
+    <!-- #Footer start here  -->
 
-  <div class="svclinks-container">
-    <ul class="svclinks__list">
-      <li>
-        <div>
-          <button>
-            <span>Real Estate</span>
-          </button>
-        </div>
-      </li>
-      <li>
-        <div>
-          <button>
-            <span>Rentals</span>
-          </button>
-        </div>
-      </li>
-      <li>
-        <div>
-          <button>
-            <span>Mortgage Rates</span>
-          </button>
-        </div>
-      </li>
-      <li>
-        <div>
-          <button>
-            <span>Browse Homes</span>
-          </button>
-        </div>
-      </li>
-    </ul>
-  </div>
-</body>
-
+    <div class="svclinks-container">
+      <ul class="svclinks__list">
+        <li>
+          <div>
+            <button>
+              <span>Real Estate</span>
+            </button>
+          </div>
+        </li>
+        <li>
+          <div>
+            <button>
+              <span>Rentals</span>
+            </button>
+          </div>
+        </li>
+        <li>
+          <div>
+            <button>
+              <span>Mortgage Rates</span>
+            </button>
+          </div>
+        </li>
+        <li>
+          <div>
+            <button>
+              <span>Browse Homes</span>
+            </button>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </body>
 </html>
