header an inital upload

--- a/index.html
+++ b/index.html
@@ -19,6 +19,106 @@
 ============ -->
 
     <!-- #header start here  -->
+  <div class="header-container">
+    <nav>
+      <div class="header-container_icons">
+        <i class="fas fa-bars"></i>
+        <i class="far fa-times-circle"></i>
+      </div> 
+        <ul class="header-container_nav-list">
+          <li>
+            <a href="#">Buy</a>
+              <div class="header-container_sub-dropdown">
+                <ul>
+                <li>
+                  <a href="#">Home for Sale</a>
+                </li>
+                <li>
+                  <a href="#">Coming Soon!</a>
+                </li> 
+                </ul>
+              </div>
+              </li>
+              <li>
+                <a href="#">Rent</a>
+                <div class="header-container_sub-dropdown">
+                <ul>
+                <li>
+                  <a href="#">Search for Rentals</a>
+                </li>
+                <li>
+                  <a href="#">Coming Soon!</a>
+                </li> 
+                </ul>
+                </div>
+              </li>
+              <li>
+                <a href="#">Sell</a>
+                  <div class="header-container_sub-dropdown">
+                  <ul>
+                    <li>
+                      <a href="#">Resources</a>
+                    </li>
+                    <li>
+                      <a href="#">Coming Soon!</a>
+                    </li> 
+                    </ul>
+                  </div>
+              </li>
+              <li>
+                <a href="#">Home Loans</a>
+                <div class="header-container_sub-dropdown">
+                <ul>
+                <li>
+                <a href="#">Shop Mortgages</a>
+                </li>
+                <li>
+                <a href="#">Coming Soon!</a>
+                </li> 
+                </ul>
+                </div>
+              </li>
+              <li>
+                <a href="#">Agent Finder</a>
+                <div class="header-container_sub-dropdown">
+                  <ul>
+                  <li>
+                    <a href="#">Real Estate Agents</a>
+                  </li>
+                  <li>
+                    <a href="#">Coming Soon!</a>
+                  </li> 
+                  </ul>
+                  </div>
+              </li>
+              <li class="header-container_title">
+                <a href="#">Pillow</a>
+              </li>   
+              <li>
+                  <a href="#">Manage Rentals</a>
+                  <div class="header-container_sub-dropdown">
+                      <ul>
+                          <li>
+                              <a href="#">Rental Management Tools</a>
+                          </li>
+                          <li>
+                              <a href="#">Coming Soon!</a>
+                          </li> 
+                      </ul>
+                  </div>
+              </li>
+              <li>
+                  <a href="#">Advertise</a>
+              </li>
+              <li>
+                  <a href="#">Help</a>
+              </li>
+              <li>
+                  <a href="#">Sign In</a>
+              </li>
+          </ul>
+      </nav>
+</div>
 
     <!-- =========
   Cards Components
@@ -67,7 +167,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> 
 
     <!-- =========
      Footer 
